--- a/untitled/CMakeLists.txt
+++ b/untitled/CMakeLists.txt
@@ -3,5 +3,9 @@ project(untitled)
 
 set(CMAKE_CXX_STANDARD 14)
 
+include_directories(.)
+
 add_executable(untitled
-        main.cpp)
+        main.cpp
+        student.cpp
+        student.h)
